--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ ul {
   font-weight: 700;
 }
 
-.logo_bottom {
+.footer_logo {
   padding-bottom: 1.25rem;
 }
 
@@ -71,7 +71,7 @@ ul {
   font-size: 1.625rem;
 }
 
-.address {
+.footer__address {
   color: var(--color-grey2);
   font-size: 0.875rem;
   line-height: 1.14;
@@ -362,7 +362,7 @@ ul {
   border-bottom: 1px solid #ececec;
 }
 
-.header-div {
+.header__body {
   background-color: var(--color-white);
   height: 5rem;
   display: flex;
@@ -501,22 +501,32 @@ ul {
   color: var(--color-white);
 }
 
-.socials {
-  display: flex;
+.ourteam__socials {
   padding: 1rem 2rem 1.125rem;
-  gap: 0.625rem;
-  border-radius: 50%;
+}
+
+.footer__socials {
+  padding-top: 1.25rem;
 }
 
 .footer-div3 {
   display: flex;
-  padding-top: 1.25rem;
   gap: 0.625rem;
   border-radius: 50%;
 }
 
 .footer-div4 {
-  background-color: var(--color-grey5);
+ 
+  border-radius: 50%;
+}
+
+.socials__area-greybgrd {
+ background-color: var(--color-grey5);
+}
+
+.socials {
+  display: flex;
+  gap: 0.625rem;
   border-radius: 50%;
 }
 
@@ -524,8 +534,8 @@ ul {
   border-radius: 50%;
 }
 
-.socials__area:hover .socialsbody:hover,
-.socials__area:focus .socials--body:focus,
+.socials__area:hover.socials--body,
+.socials__area:focus.socials--body,
 .footer-div4:hover,
 .footer-div4:focus {
   background-color: #2196f3;
@@ -538,17 +548,24 @@ ul {
   cursor: pointer;
 }
 
+.socials__subarea:hover.socials--body,
+.socials__subarea:focus.socials--body {
+  fill: var(--color-white);
+  color: var(--color-white);
+}
+
+.socials__icon:hover,
+.socials__icon:focus,
+.footer-icon:hover,
+.footer-icon:focus {
+  fill: currentColor;
+}
+
 .footer-div5 {
   padding: 0.75rem;
   max-height: 2.75rem;
   color: var(--color-white);
   cursor: pointer;
-}
-
-.socials__subarea:hover,
-.socials__subarea:focus {
-  fill: var(--color-white);
-  color: var(--color-white);
 }
 
 .footer-div6 {
@@ -572,13 +589,6 @@ ul {
 
 .footer-icon {
   color: inherit;
-}
-
-.socials__icon:hover,
-.socials__icon:focus,
-.footer-icon:hover,
-.footer-icon:focus {
-  fill: currentColor;
 }
 
 .navigation {
@@ -632,19 +642,19 @@ ul {
   box-shadow: 0px 3px 1px #0000001a, 0px 1px 2px #00000014, 0px 2px 2px #0000001f;
 }
 
-.ourclients-section {
+.ourclients {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.ourclients-h2 {
+.ourclients__title {
   font-weight: 700;
   font-size: 2.25rem;
   line-height: 1.17;
 }
 
-.ourclients-div {
+.ourclients__section {
   display: flex;
   gap: 1.875rem;
   fill: var(--color-grey4);
@@ -657,7 +667,7 @@ ul {
   color: var(--color-grey4);
 }
 
-.ourclients-div1 {
+.client1 {
   padding: 1.5625rem 4.0625rem 1.3125rem 4rem;
 }
 
@@ -667,27 +677,27 @@ ul {
   border: 1px solid var(--color-blue);
 }
 
-.ourclients-div2 {
+.client2 {
   padding: 1.3125rem 4.0625rem 1.1875rem 4rem;
 }
 
-.ourclients-div3 {
+.client3 {
   padding: 1.5625rem 4.0625rem 1.625rem 3.875rem;
 }
 
-.ourclients-div4 {
+.client4 {
   padding: 1.5625rem 2.6875rem 1.6875rem 2.6875rem;
 }
 
-.ourclients-div5 {
+.client5 {
   padding: 1.4375rem 3.3125rem 1.5rem 3.375rem;
 }
 
-.ourclients-div6 {
+.client6 {
   padding: 1.4375rem 2.375rem 1.5625rem 2.375rem;
 }
 
-.footer-div {
+.footer__area {
   padding: 3.75rem 0;
   height: 15.75rem;
   display: flex;
