--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,7 @@
 @import './components/navigation';
 @import './components/address';
 @import './components/effsolutions';
+@import './components/placeholder';
+@import './components/ourservices';
+@import './components/ourteam';
+@import './components/teammember';
