--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -1,5 +1,11 @@
 .address {
   display: flex;
+  color: var(--color-grey2);
+  font-size: 0.875rem;
+  line-height: 1.14;
+  font-weight: 500;
+  /* display: block;*/
+  text-decoration: none;
   &__section {
     display: flex;
     align-items: center;
