modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/styles.css 	modified:   index.html 	new file:   sass/components/_socials.scss 	modified:   sass/main.scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,4 @@
 @import './components/ourservices';
 @import './components/ourteam';
 @import './components/teammember';
+@import './components/socials';
