modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   sass/components/_socials.scss

--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -11,9 +11,12 @@
     color: var(--color-grey4);
     cursor: pointer;
   }
-  &__icon:hover,
-  &__icon:focus {
+  &__icon {
     fill: currentColor;
+    &:hover,
+    &:focus {
+      fill: currentColor;
+    }
   }
 }
 .socials__area:hover.socials--body,
