modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/styles.css 	modified:   index.html 	new file:   sass/components/_client.scss 	new file:   sass/components/_ourclients.scss 	modified:   sass/main.scss

--- a/css/styles.css
+++ b/css/styles.css
@@ -676,7 +676,11 @@ ul {
 }
 
 .client1 {
-  padding: 1.5625rem 4.0625rem 1.3125rem 4rem;
+/*  padding: 1.5625rem 4.0625rem 1.3125rem 4rem; */
+
+
+
+
 }
 
 .ourclients--border:hover,
