--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,5 @@
 @import './components/ourteam';
 @import './components/teammember';
 @import './components/socials';
+@import './components/ourclients';
+@import './components/client';
