--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -12,7 +12,7 @@
     }
   }
   &_image {
-    position: fixed;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
