--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,6 +1,7 @@
 .client {
   min-width: 10.625rem;
   min-height: 5.75rem;
+  position: relative;
   &--border {
     border: 1px solid var(--color-grey4);
     border-radius: 4px;
@@ -12,7 +13,7 @@
     }
   }
   &_image {
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
