modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   index.html 	new file:   sass/components/_footer.scss 	modified:   sass/components/_logo.scss 	modified:   sass/main.scss

--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,7 +7,9 @@
   &__web {
     color: var(--color-blue);
   }
-
+  &--whitefont {
+    color: var(--color-white);
+  }
   .span {
     display: inline-block;
     font-size: 1.625rem;
