--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,4 @@
 @import './components/socials';
 @import './components/ourclients';
 @import './components/client';
+@import './components/footer';
