--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -4,14 +4,21 @@
   border-radius: 50%;
   &__area {
     border-radius: 50%;
+    &--greybackground {
+      background-color: var(--color-grey5);
+    }
   }
   &__subarea {
     padding: 0.75rem;
     max-height: 2.75rem;
     color: var(--color-grey4);
     cursor: pointer;
+    &--whitecolor {
+      color: var(--color-white);
+    }
   }
   &__icon {
+    color: inherit;
     fill: currentColor;
     &:hover,
     &:focus {
