modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/styles.css 	modified:   index.html 	modified:   sass/components/_footer.scss 	new file:   sass/components/_newsletter.scss 	modified:   sass/main.scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,4 @@
 @import './components/ourclients';
 @import './components/client';
 @import './components/footer';
+@import './components/newsletter';
