--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,6 @@
 @import './components/client';
 @import './components/footer';
 @import './components/newsletter';
+@import './components/buttons';
+@import './components/portfolio';
+@import './components/portfolio-example';
