modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   sass/components/_address.scss 	modified:   sass/components/_buttons.scss 	modified:   sass/components/_effsolutions.scss 	modified:   sass/components/_footer.scss 	modified:   sass/components/_form.scss 	modified:   sass/components/_header.scss 	modified:   sass/components/_modal.scss 	modified:   sass/components/_newsletter.scss 	modified:   sass/components/_portfolio-example.scss 	modified:   sass/utils/_vars.scss

--- a/sass/components/_effsolutions.scss
+++ b/sass/components/_effsolutions.scss
@@ -1,5 +1,6 @@
 .effsolutions {
-  background-image: linear-gradient(#2f303a66, #2f303a66), url(../images/banners/background.jpg);
+  background-image: linear-gradient(var(--color-background), var(--color-background)),
+    url(../images/banners/background.jpg);
   max-width: 100rem;
   margin: 0 auto;
   &__section {
