--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -31,7 +31,7 @@
   }
 
   &__input {
-    border: 1px solid #21212133;
+    border: 1px solid var(--color-grey7);
     border-radius: 4px;
     padding-left: 2.625rem;
     min-width: 28rem;
