--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,8 +11,8 @@
   opacity: 1;
   transform: translate(-50%, -50%);
   z-index: 2;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px var(--color-black2), 0px 1px 1px var(--color-black5),
+    0px 2px 1px var(--color-black6);
   border-radius: 4px;
 
   &__title {
