--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -19,9 +19,9 @@
     min-height: 3.125rem;
     padding-left: 1rem;
     background-color: inherit;
-    color: #ffffff99;
-    border: 1px solid #ffffff4d;
-    filter: drop-shadow(0px 4px 4px #00000026);
+    color: var(--color-grey8);
+    border: 1px solid var(--color-grey9);
+    filter: drop-shadow(0px 4px 4px var(--color-black6));
     border-radius: 4px;
   }
 
