--- a/sass/components/_portfolio-example.scss
+++ b/sass/components/_portfolio-example.scss
@@ -1,7 +1,8 @@
 .portfolio-example {
   &:hover,
   &:focus {
-    box-shadow: 0px 1px 1px #0000001f, 0px 4px 4px #0000000f, 1px 4px 6px #00000029;
+    box-shadow: 0px 1px 1px var(--color-black2), 0px 4px 4px var(--color-black2),
+      1px 4px 6px var(--color-black7);
     cursor: pointer;
     .portfolio-example__bluewindow {
       opacity: 0.9;
@@ -25,43 +26,27 @@
     letter-spacing: 0.03em;
     transition-property: transform;
     transform: translatey(100%);
-    /* .portfolio-example:hover,
-    .portfolio-example:focus {
-      opacity: 0.9;
-      transform: translatey(0); */
   }
-}
-/*   position: absolute;
-    width: 23.125rem;
-    height: 18.375rem;
-    background-color: var(--color-blue);
+  &__image {
+    margin-bottom: -4px;
+  }
+  &__section {
+    border: solid var(--color-grey1);
+    border-width: 0px 1px 1px;
+  }
+  &__titlegroup {
+    padding: 1.25rem 1.5rem;
+  }
+  &__title {
     font-size: 1.125rem;
-    line-height: 1.555;
-    padding: 3.0625rem 2.8125rem 3.0625rem 1.5rem;
-    color: var(--color-white);
-    letter-spacing: 0.03em;
-    transition-property: transform;
-    transform: translatey(100%);*/
-
-&__image {
-  margin-bottom: -4px;
-}
-&__section {
-  border: solid var(--color-grey1);
-  border-width: 0px 1px 1px;
-}
-&__titlegroup {
-  padding: 1.25rem 1.5rem;
-}
-&__title {
-  font-size: 1.125rem;
-  line-height: 2;
-  font-weight: 700;
-  padding-bottom: 0.25rem;
-}
-&__comment {
-  font-size: 1rem;
-  line-height: 1.875;
-  font-weight: 400;
-  color: var(--color-grey2);
+    line-height: 2;
+    font-weight: 700;
+    padding-bottom: 0.25rem;
+  }
+  &__comment {
+    font-size: 1rem;
+    line-height: 1.875;
+    font-weight: 400;
+    color: var(--color-grey2);
+  }
 }
