--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -5,13 +5,22 @@
   --color-grey4: #afb1b8;
   --color-grey5: #ffffff1a;
   --color-grey6: #2f303acc;
+  --color-grey7: #21212133;
+  --color-grey8: #ffffff99;
+  --color-grey9: #ffffff4d;
   --color-blue: #2196f3;
   --color-black: #212121;
   --color-black2: #0000001f;
   --color-black3: #000000;
   --color-black4: #0000001a;
+  --color-black5: #00000021;
+  --color-black6: #00000033;
+  --color-black6: #00000026;
+  --color-black7: #00000029;
   --color-white: #fff;
   --color-white2: #f5f4fa;
+  --color-white3: #ececec;
+  --color-background: #2f303a66;
 }
 
 body {
