modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   sass/components/_socials.scss

--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -6,6 +6,10 @@
     border-radius: 50%;
     &--greybackground {
       background-color: var(--color-grey5);
+      &:hover,
+      &:focus {
+        background-color: var(--color-blue);
+      }
     }
   }
   &__subarea {
