modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   index.html 	modified:   portfolio.html 	modified:   sass/components/_ourclients.scss 	modified:   sass/main.scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 @import './components/ourteam';
 @import './components/teammember';
 @import './components/socials';
-@import './components/ourclients';
+@import './components/ourClients';
 @import './components/client';
 @import './components/footer';
 @import './components/newsletter';
