--- a/sass/components/_ourclients.scss
+++ b/sass/components/_ourclients.scss
@@ -1,4 +1,4 @@
-.ourclients {
+.ourClients {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,4 +13,6 @@
     fill: var(--color-grey4);
     padding-top: 3.125rem;
   }
+  @extend .section;
+  @extend .container;
 }
