modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   index.html 	modified:   portfolio.html 	modified:   sass/components/_address.scss 	modified:   sass/components/_buttons.scss 	modified:   sass/components/_client.scss 	modified:   sass/components/_footer.scss 	modified:   sass/components/_form.scss 	modified:   sass/components/_header.scss 	modified:   sass/components/_logo.scss 	modified:   sass/components/_modalbackground.scss 	modified:   sass/components/_navigation.scss 	modified:   sass/components/_ourservices.scss 	modified:   sass/components/_placeholder.scss 	modified:   sass/components/_portfolio-example.scss 	modified:   sass/components/_socials.scss

--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -12,6 +12,8 @@
     color: var(--color-grey2);
     fill: var(--color-grey2);
 
+    @extend .transition;
+
     &:hover,
     &:focus {
       color: var(--color-blue);
@@ -30,15 +32,21 @@
     &:focus {
       fill: currentColor;
     }
+    @extend .highlight;
+    @extend .transition;
   }
 
   &__link {
     padding-left: 0.625rem;
     color: inherit;
+    @extend .address; 
 
     &:hover,
     &:focus {
       color: currentColor;
     }
+
+    @extend .highlight;
+    @extend .transition;
   }
 }
