--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -2,6 +2,10 @@
   min-width: 10.625rem;
   min-height: 5.75rem;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @extend .button;
 
   &--border {
     border: 1px solid var(--color-grey4);
@@ -15,11 +19,11 @@
     }
   }
 
-  &_image {
-    position: absolute;
+  &__image {
+    /*  position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);*/
     fill: currentColor;
   }
 }
