--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,6 +8,12 @@
     display: flex;
     color: var(--color-white);
     text-decoration: none;
+
+    @extend .container;
+  }
+
+  &__subarea {
+    @extend .container;
   }
 
   &__logo {
@@ -23,9 +29,13 @@
     font-weight: 500;
     display: block;
     text-decoration: none;
+
     &--padding {
       padding: 0.5625rem 0;
     }
+
+    @extend .highlight;
+    @extend .transition;
   }
 
   &__socialarea {
